[package]
name = "Pillager-Bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.45"
dotenvy = "0.15.7"
poise = "0.6.2"
regex = "1.12.4"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "chrono", "macros", "migrate"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
